--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -5,8 +5,8 @@
 {% block content %}
   {% for post in page_obj %}
     <article class="mb-5">
-      {% include "includes/post_card.html" %}
+      {% include "includes/../includes/post_card.html" %}
     </article>
   {% endfor %}
-  {% include "includes/paginator.html" %}
+  {% include "includes/../includes/paginator.html" %}
 {% endblock %}
