--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -7,8 +7,8 @@
   <p class="col-6 offset-3 mb-5 lead text-center">{{ category.description }}</p>
   {% for post in page_obj %}
     <article class="mb-5">  
-      {% include "includes/post_card.html" %}
+      {% include "includes/../includes/post_card.html" %}
     </article>   
   {% endfor %}
-  {% include "includes/paginator.html" %}
+  {% include "includes/../includes/paginator.html" %}
 {% endblock %}
